--- a/public/templates/modals/connect.html
+++ b/public/templates/modals/connect.html
@@ -3,8 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Connect to Minecraft server</h4>
-        <p>This application only works with 1.8 Minecraft servers.</p>
+        <h4 class="modal-title" id="myModalLabel">Connect to LattyCraft</h4>
       </div>
       <form ng-submit="connect()">
         <div class="modal-body">
@@ -23,34 +22,6 @@
             </div>
           </div>
           <hr>
-          <div class="row">
-            <div class="col-md-12">
-              <h6>My Servers</h6>
-              <table class="table table-bordered" ng-show="servers.length">
-                <tr ng-repeat="server in servers track by $index">
-                  <td>{{server.name}}</td>
-                  <td>{{server.ip}}:{{server.port}}</td>
-                  <td><span class="label label-info" ng-click="select($index)" style="cursor:pointer">Select</span></td>
-                </tr>
-              </table>
-              <p ng-hide="servers.length">You haven't saved any servers</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label>Server IP</label>
-                <input type="text" ng-model="ip" class="form-control" placeholder="mc.server.com" required>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label>Server Port (Leave empty if unknown)</label>
-                <input type="number" ng-model="port" class="form-control" placeholder="25565">
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="modal-footer">
           <span class="btn btn-default" data-dismiss="modal">Close</span>
           <button type="submit" class="btn btn-primary">Connect</button>
