--- a/public/templates/windows/nav.html
+++ b/public/templates/windows/nav.html
@@ -7,14 +7,13 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">MinecraftChat</a>
+    <a class="navbar-brand" href="#">LattyCraft Chat</a>
   </div>
 
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
       <li><a style="cursor:pointer" ng-hide="connected" data-toggle="modal" data-target="#connectModal">Connect</a></li>
       <li><a style="cursor:pointer;color:#BE1106" ng-show="connected" ng-click="disconnect()">Disconnect</a></li>
-      <li><a style="cursor:pointer" data-toggle="modal" data-target="#serversModal">My Servers</a></li>
       <li><a href="https://github.com/AlexKvazos/MinecraftChat" target="new"><i class="fa fa-github"></i> GitHub</a></li>
     </ul>
     <ul class="nav navbar-nav pull-right">
