--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -16,11 +16,14 @@
   <link rel="stylesheet" href="/css/style.css">
 
 </head>
-<body ng-app="chat">
+<body ng-app="chat" >
 
 
   <!-- main windows -->
   <div ng-include="'templates/windows/nav.html'"></div>
+  <div ng-include="'templates/modals/connect.html'"></div>
+  </script>
+  
   <div ng-include="'templates/windows/chat.html'"></div>
 
 
@@ -31,17 +34,6 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="/lib/socket.io.js"></script>
   <script src="/js/app.js"></script>
-
-  <!-- google analytics -->
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-43803735-2', 'auto');
-  ga('send', 'pageview');
-  </script>
 
 
 </body>
