--- a/public/templates/modals/connect.html
+++ b/public/templates/modals/connect.html
@@ -23,7 +23,7 @@
             </div>
           </div>
           <hr>
-          <div class="row">
+          <!--<div class="row">
             <div class="col-md-12">
               <h6>My Servers</h6>
               <table class="table table-bordered" ng-show="servers.length">
@@ -49,7 +49,7 @@
                 <input type="number" ng-model="port" class="form-control" placeholder="25565">
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
         <div class="modal-footer">
           <span class="btn btn-default" data-dismiss="modal">Close</span>
