--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,8 @@ body {
 #buffer {
   font-family: 'Source Code Pro';
   position: absolute;
-  top: 51px;
+/*  top: 51px;*/
+  top: 0px;
   bottom: 40px;
   left: 0;
   right: 0;
