--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -14,17 +15,80 @@
   <link href='//fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//bootswatch.com/cyborg/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
-
-</head>
-<body ng-app="chat" >
-
-
-  <!-- main windows -->
-  <div ng-include="'templates/windows/nav.html'"></div>
-  <div ng-include="'templates/modals/connect.html'"></div>
+  <script>
+    function openLoginBox() {
+      $('#connectModal').modal('show');
+    }
+    function closeLoginBox() {
+      $('#connectModal').modal('hide');
+    }
+    function onLoad() {
+      setTimeout(function() {
+        Android.toast('Connecting');
+        //openLoginBox();
+        //document.getElementById('sam11').click();
+        //closeLoginBox();
+        //Android.toast('Connected');
+        // VERY VERY ugly hack
+        angular.element(document.getElementById('connectModal')).scope().connectSam();
+        //$scope.connectController.connectSam();
+      }, 100);
+    }
   </script>
-  
-  <div ng-include="'templates/windows/chat.html'"></div>
+</head>
+
+<!--<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="navController"> -->
+  <!-- Brand and toggle get grouped for better mobile display -->
+<!--  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">MinecraftChat</a>
+  </div>
+
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav">
+      <li><a style="cursor:pointer" ng-hide="connected" data-toggle="modal" data-target="#connectModal">Connect</a>
+      </li>
+      <li><a style="cursor:pointer;color:#BE1106" ng-show="connected" ng-click="disconnect()">Disconnect</a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav pull-right">
+      <li ng-hide="connected"><a style="color:#9E0F06"><i class="fa fa-fw fa-circle-thin"></i> Not Connected</a>
+      </li>
+      <li ng-show="connected"><a style="color:#6AC126"><i class="fa fa-fw fa-circle"></i> {{host}}:{{port}} - <b>{{username}}</b></a>
+      </li>
+    </ul>
+  </div>
+</nav>-->
+
+<body ng-app="chat" onload="onLoad();">
+  <!--<div ng-include="'templates/windows/chat.html'"></div>-->
+  <div id="buffer" ng-controller="bufferController">
+
+    <!--<div id="players" ng-controller="playersController" ng-show="players.length" class="hidden-xs">
+      <div class="header">Players [{{players.length}}]</div>
+      <div class="body">
+        <ul>
+          <li ng-repeat="player in players">
+            <img src="//cravatar.eu/helmavatar/{{player}}/18" width="18px" height="18px"> {{player}}
+          </li>
+        </ul>
+      </div>
+    </div>-->
+
+  </div>
+
+  <form ng-submit="send()" ng-controller="chatController">
+    <div id="chat">
+      <input type="text" maxlength="100" ng-model="chat" placeholder="Type to chat...">
+    </div>
+
+    <div id="send">
+      <input type="submit" value="Chat">
+    </div>
+  </form>
 
 
   <!-- scripts -->
@@ -35,6 +99,8 @@
   <script src="/lib/socket.io.js"></script>
   <script src="/js/app.js"></script>
 
-
 </body>
+
 </html>
+<!-- connect modal -->
+<div ng-include="'templates/modals/connect.html'"></div>
