--- a/public/templates/modals/connect.html
+++ b/public/templates/modals/connect.html
@@ -3,12 +3,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Connect to Minecraft server</h4>
+        <h4 class="modal-title" id="myModalLabel">Connect to Samistine.com</h4>
         <p>This application only works with 1.8 Minecraft servers.</p>
       </div>
-      <form ng-submit="connect()">
+      <form ng-submit="connectSam()">
         <div class="modal-body">
-          <div class="row">
+          <!--<div class="row">
             <div class="col-sm-6">
               <div class="form-group">
                 <label>Minecraft Username/Email</label>
@@ -21,9 +21,9 @@
                 <input type="password" ng-model="password" class="form-control" placeholder="" required>
               </div>
             </div>
-          </div>
-          <hr>
-          <!--<div class="row">
+          </div>-->
+          <!--<hr>
+          <div class="row">
             <div class="col-md-12">
               <h6>My Servers</h6>
               <table class="table table-bordered" ng-show="servers.length">
@@ -52,8 +52,8 @@
           </div>-->
         </div>
         <div class="modal-footer">
-          <span class="btn btn-default" data-dismiss="modal">Close</span>
-          <button type="submit" class="btn btn-primary">Connect</button>
+          <!--<span class="btn btn-default" data-dismiss="modal">Close</span>-->
+          <button type="submit" id="sam11" class="btn btn-primary">Connect</button>
         </div>
       </form>
     </div>
