--- a/public/templates/modals/connect.html
+++ b/public/templates/modals/connect.html
@@ -1,61 +1,3 @@
-<div class="modal fade" id="connectModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" ng-controller="connectController">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Connect to Samistine.com</h4>
-        <p>This application only works with 1.8 Minecraft servers.</p>
-      </div>
-      <form ng-submit="connectSam()">
-        <div class="modal-body">
-          <!--<div class="row">
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label>Minecraft Username/Email</label>
-                <input type="text" ng-model="username" class="form-control" placeholder="Steve" required>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label>Minecraft Password</label>
-                <input type="password" ng-model="password" class="form-control" placeholder="" required>
-              </div>
-            </div>
-          </div>-->
-          <!--<hr>
-          <div class="row">
-            <div class="col-md-12">
-              <h6>My Servers</h6>
-              <table class="table table-bordered" ng-show="servers.length">
-                <tr ng-repeat="server in servers track by $index">
-                  <td>{{server.name}}</td>
-                  <td>{{server.ip}}:{{server.port}}</td>
-                  <td><span class="label label-info" ng-click="select($index)" style="cursor:pointer">Select</span></td>
-                </tr>
-              </table>
-              <p ng-hide="servers.length">You haven't saved any servers</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label>Server IP</label>
-                <input type="text" ng-model="ip" class="form-control" placeholder="mc.server.com" required>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label>Server Port (Leave empty if unknown)</label>
-                <input type="number" ng-model="port" class="form-control" placeholder="25565">
-              </div>
-            </div>
-          </div>-->
-        </div>
-        <div class="modal-footer">
-          <!--<span class="btn btn-default" data-dismiss="modal">Close</span>-->
-          <button type="submit" id="sam11" class="btn btn-primary">Connect</button>
-        </div>
-      </form>
-    </div>
-  </div>
+<div class="modal fade" id="connectModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true" ng-controller="connectController">
+  <button type="submit" id="connectBtn" ng-click="connectSam()">Connect</button>ewr
 </div>
